--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <ul>
 <li><a > Project 1</li>
 <li><a > Project 2</li>
-<li><a > Project 3</li>
+<li><a href="project3/index.html"> Project 3</li>
+   
 </ul>
 </body>
 </html>
