--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <p> This is my Project </p>
 <ul>
 <li><a > Project 1</li>
-<li><a > Project 2</li>
-<li><a href="project3/index.html"> Project 3</li>
+<li><a href ="project2/resume.html"> Project 2</li>
+<li><a href ="project3/index.html"> Project 3</li>
    
 </ul>
 </body>
