--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <p> This is my Project </p>
 <ul>
-<li><a > Project 1</li>
+<li><a href ="project1/resume.html" > Project 1</li>
 <li><a href ="project2/resume.html"> Project 2</li>
 <li><a href ="project3/index.html"> Project 3</li>
    
