--- a/project2/resume.html
+++ b/project2/resume.html
@@ -3,27 +3,38 @@
 
 <head>
     <title>Harry Grant Resume</title>
-<style>
-        body { background-color:#fff; }
-        td { border:  1px dashed #333; padding:10px; }
-        th { background-color:#ddd; color:#333; }
-    </style>
+    <link rel="stylesheet" href="resumeStyle.css" type="text/css">
 </head>
-<body style="background-color:#808080;">
-<p> </p>
+<body>
+  <ul id="header">
+    <h1>Harry Grant</h1>
 
+    <li>Contact: 803-636-3080</li>
+    <li>Location: Benedict College</li>
+  </ul>
+<ol id="right-nav">
+  <center><h2> Table of Contents</h2></center>
+    <li> Contact Information </li>
+    <li> School History </li>
+    <li> Skills </li>
+    <li>About me</li>
+    <li>Professional Summary</li>
+    <li>Certifications</li>
+    <li>School Activities</li>
+</ol>
+<ol id="left-nav">
+    <li> <a href="https://mail.google.com/mail/u/0?ui=2&ik=97a4d864fc&attid=0.1&permmsgid=msg-a:r-7431130570821691840&th=18115ec7be24d6a3&view=att&disp=safe&realattid=f_l3szcplb0"<p> Resume</a></p></li>
+    <li> <a href="https://mail.google.com/mail/u/0?ui=2&ik=97a4d864fc&attid=0.1&permmsgid=msg-a:r6361428169725867953&th=17a7a311a5aa32da&view=att&disp=inline&realattid=f_kqrl41ut0"<p>Certification</a></p></li>
+</ol>
   <right><img align="right" src="picture copy.png"></right>
 
 <hr>
-    <center><h1>Harry Grant</h1></center>
+    <center><h1>Resume</h1></center>
     <hr>
   
-    <h3><b>Contact Information :</b></h3>
+    <h3><b></b></h3>
 
-    <p><a href="https://www.instagram.com/harry_lgj/"<p>Instagram </a></p>
-    <p><a href="https://www.linkedin.com/in/harry-grant-8a6a21220/"<p>linkedin </a></p>
-    <p><u>Cellphone: (803)636-3080</u></p>
-    <hr>
+  
 
     <h3><b>School History :</b></h3>
   
@@ -117,6 +128,11 @@ and accuracy.</p>
         <li> SPC General Council Member(2022-2023) </li>
     </ol>
   <hr>
+  <ul id="footer">
+    <li> <a href="https://www.instagram.com/harry_lgj/"<p>Instagram </p></a></li>
+    <li> <a href="https://www.linkedin.com/in/harry-grant-8a6a21220/"<p>linkedin</p></a></li>
+    <li> <a herf="https://www.facebook.com/harry.grant.1276"<p>Facebook</p></a></li>
+    </ul>
 </body>
 
 </html>
